--- a/index.html
+++ b/index.html
@@ -10,67 +10,61 @@
 
 
 <body>
-<!--Menu--------------------------------------------------->
+<!--Menu-->
 <Main>
     
-<section>
+<header>
+ <nav>
     <li> 
         <ul> Store </ul>
-        <ul> Mac </ul>
-        <ul> ipad </ul>
-        <ul> iphone </ul>
-        <ul> Watch </ul>
-        <ul> Vision </ul>
-        <ul> AirPods </ul>
-        <ul> TV & Home </ul>
-        <ul> Entertainment </ul>
-        <ul> Accessories </ul>
-        <ul> Support </ul>
     </li> 
-    </section>
+ </nav>
     
-<!--De Header inclusief de menu------------------------------->
+ <!--De Header inclusief de menu-->
 
-    <header>
-        <article>
-         <img src="./foto/Logo/hero_logo_apple_watch_series_9__eg5xcrxghuaa_largetall.png" alt=""> <!--Logo-->
-          <p> Smarter. Brighter. Mightier. </p>
-            <a href="./html/link.html"> Learn more </a> 
-            <a href="./html/link.html"> Buy </a>
-        </article>
-    </header>
+        <section>
+        <h1> The apple story shopping event </h1>
+        <h2> Get an Apple Gift Card up to $200 with your eligible purchase. </h2>
+        <p> Offer starts 11.24 </p>
+        <a href="./html/link.html"> Get an early look </a> 
+        <img src="./foto/ase-hero-202311.jpg" alt="">
+     </section>
+</header>
 
 </Main>
+
+
 <!--tweede artikel-------------------------------------------------------------------->
 
     <article>
-      <h1> Iphone 15 Pro</h1>
-         <p> Titanium. So strong. So light. So Pro</p>
+         <img src="./foto/Logo/hero_logo_apple_watch_series_9__eg5xcrxghuaa_largetall-1.png" alt="">
+         <h2> Double tap. A magical new way to use Apple Watch.</h2>
         <a href="./html/link.html"> Learn more </a> 
         <a href="./html/link.html"> Buy </a>
     </article>
 
-<!--derde artikel--------------------------------------------------------------------->
+<!--derde artikel-------------------------------------------------------------------->
 
-<article>
-     <h1> Iphone 15</h1>
-        <p> New camera. New design. Newphoria</p>
-       <a href="./html/link.html"> Learn more </a>
-       <a href="./html/link.html"> Buy </a>
-   </article>
+    <article>
+        <h2> Iphone 15 Pro</h2>
+           <p> Titanium. So strong. So light. So Pro</p>
+          <a href="./html/link.html"> Learn more </a> 
+          <a href="./html/link.html"> Buy </a>
+      </article>
+  
 
 <!-- collectie met artikelen-------------------------------------------------------------------->
 
 <article>
 
     <section>
-        <h2> Wonder awaits </h2>
+        <h3> Wonder awaits </h3>
             <p> Give the gifts they've been looking forward to all year. </p>
            <a href="./html/link.html"> shot </a>
      </section>
 
      <section>
-        <h2> MacBook Pro </h2>
+        <h3> MacBook Pro </h3>
             <p> Mind-blowing. Head-turing. </p>
            <a href="./html/link.html"> Learn more</a>
            <a href="./html/link.html"> Buy </a>
