--- a/html/2e Pagina.html
+++ b/html/2e Pagina.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/andere.css">
+    <link rel="stylesheet" href="../css/pagina2.css">
+    <link rel="stylesheet" href="../css/main.css">
     
     <script src="./javascript/main.js"></script>
 </head>
@@ -13,65 +14,125 @@
 <main>
 
 
-<!--@@@@@@@@@@@@@@@@@-->
+<!---------------->
 <!--De Navigatie-->
-<!--@@@@@@@@@@@@@@@@@-->
-
-<nav>
-<button id="menu"> <img src="https://assets.codepen.io/274456/ui-icon-hamburger.svg" alt="" /></button>
-<button> <img src="https://assets.codepen.io/274456/ui-icon-hamburger.svg" alt="" /></button>
-<button> <img src="https://assets.codepen.io/274456/ui-icon-hamburger.svg" alt="" /></button>
-<button> <img src="https://assets.codepen.io/274456/ui-icon-hamburger.svg" alt="" /></button>  
-
-<ul>
-
-</ul>
-
-</nav>
-<section>
-    <p> Why Ipad </p>
-    <a href=""> Shop </a>
-</section>
-<nav>
-
-</nav>
-
-<!--@@@@@@@@@@@@@@@@@-->
-<!--Header-->
-<!--@@@@@@@@@@@@@@@@@-->
+<!---------------->
 <header>
-    <article>
-        <h1> Yes, it does that. And then some.</h1>
-        <p> Why iPad </p>
-    </article>
+    <nav>
+        <!-- Logo -->
+        <svg height="48" viewBox="0 0 17 48" width="17" xmlns="http://www.w3.org/2000/svg"> <a href="./index.html"></a><path d="m15.5752 19.0792a4.2055 4.2055 0 0 0 -2.01 3.5376 4.0931 4.0931 0 0 0 2.4908 3.7542 9.7779 9.7779 0 0 1 -1.2755 2.6351c-.7941 1.1431-1.6244 2.2862-2.8878 2.2862s-1.5883-.734-3.0443-.734c-1.42 0-1.9252.7581-3.08.7581s-1.9611-1.0589-2.8876-2.3584a11.3987 11.3987 0 0 1 -1.9373-6.1487c0-3.61 2.3464-5.523 4.6566-5.523 1.2274 0 2.25.8062 3.02.8062.734 0 1.8771-.8543 3.2729-.8543a4.3778 4.3778 0 0 1 3.6822 1.841zm-6.8586-2.0456a1.3865 1.3865 0 0 1 -.2527-.024 1.6557 1.6557 0 0 1 -.0361-.337 4.0341 4.0341 0 0 1 1.0228-2.5148 4.1571 4.1571 0 0 1 2.7314-1.4078 1.7815 1.7815 0 0 1 .0361.373 4.1487 4.1487 0 0 1 -.9867 2.587 3.6039 3.6039 0 0 1 -2.5148 1.3236z"></path></svg>
+        <!-- Zoekbalk -->
+        <svg height="48" viewBox="0 0 17 48" width="17" xmlns="http://www.w3.org/2000/svg"><path d="m16.2294 29.9556-4.1755-4.0821a6.4711 6.4711 0 1 0 -1.2839 1.2625l4.2005 4.1066a.9.9 0 1 0 1.2588-1.287zm-14.5294-8.0017a5.2455 5.2455 0 1 1 5.2455 5.2527 5.2549 5.2549 0 0 1 -5.2455-5.2527z"></path></svg>
+        <!-- Map -->
+        <svg height="48" viewBox="0 0 17 48" width="17" xmlns="http://www.w3.org/2000/svg"><path d="m13.4575 16.9268h-1.1353a3.8394 3.8394 0 0 0 -7.6444 0h-1.1353a2.6032 2.6032 0 0 0 -2.6 2.6v8.9232a2.6032 2.6032 0 0 0 2.6 2.6h9.915a2.6032 2.6032 0 0 0 2.6-2.6v-8.9231a2.6032 2.6032 0 0 0 -2.6-2.6001zm-4.9575-2.2768a2.658 2.658 0 0 1 2.6221 2.2764h-5.2442a2.658 2.658 0 0 1 2.6221-2.2764zm6.3574 13.8a1.4014 1.4014 0 0 1 -1.4 1.4h-9.9149a1.4014 1.4014 0 0 1 -1.4-1.4v-8.9231a1.4014 1.4014 0 0 1 1.4-1.4h9.915a1.4014 1.4014 0 0 1 1.4 1.4z"></path></svg>            
+        <!-- Hamburger menu icon -->
+        <button class="menu-icon" >
+            <span></span>
+            <span></span>
+        </button>
+    </nav>        
 
-    <section>
-        <p>iPad is so versatile, it’s more than up to any task. Whether you’re working on a project, expressing your creativity, or playing an immersive game, iPad is a fun and powerful way to get it done. Here are just a few of the countless things you can do with iPad.</p>
-    </section>
+<!---------------->
+<!--DropdownMenu-->
+<!---------------->
+    <nav>
+        <ul>
+            <li> <a href="./index.html"></a>Mac</li>
+            <li> <a href="./html/2e Pagina.html"></a>Ipad</li>
+            <li> <a href="ink to Iphone"></a>Iphone</li>
+            <li> <a href="ink to Watch"></a>Watch</li>
+            <li> <a href="ink to Vision"></a>Vision</li>
+            <li> <a href="ink to Airpods"></a>Airpods</li>
+            <li> <a href="ink to TV & Home"></a>TV & Home</li>
+            <li> <a href="ink to Entertainment"></a>Entertainment</li>
+            <li> <a href="ink to Accessories"></a>Accessories</li>
+            <li> <a href="ink to Mac"></a>Support</li>
+
+
+            <section>
+                <button class="light-mode"> light  </button>
+                <button class="dark-mode"> Dark </button>
+                <button class="custom-mode"> Custom </button>
+            </section>
+        </ul>
+    </nav>
 </header>
 
-<!--@@@@@@@@@@@@@@@@@-->
-<!--Header-->
-<!--@@@@@@@@@@@@@@@@@-->
 
+
+<!---------------->
+<!--eerste artikel-->
+<!---------------->
 <article>
-    <img src="../foto/Ipad/hero__dabgrginuqy6_medium_2x.jpg" alt="">
+        <img src="../foto/Ipad/hero__dabgrginuqy6_medium_2x.jpg" alt="">
+            <h1> Why iPad </h1>
+            <p> Yes, it does that. And then some.</p>
+</article>
+
+<section>
+    <img src="../foto/Ipad/bottom__fnnchnizjlu2_small_2x.jpg" alt="">
+        <p>iPad is so versatile, it’s more than up to any task. Whether you’re working on a project, expressing your creativity, or playing an immersive game, iPad is a fun and powerful way to get it done. Here are just a few of the countless things you can do with iPad.</p>
+</section>
+
+
+
+
+<!------------------>
+<!--Tweede artikel-->
+<!------------------>
+<article>
     <h2> Get the tough things done easily. </h2>
     <img src="../foto/Ipad/power__dq4xxv2tdhkm_medium_2x.jpg" alt="">
 </article>
 
+
+
+
+<!------------------>
+<!--Derde artikel-->
+<!------------------>
 <article>
+    <section>
+        <h4> Stay productive and on the go all day</h4>
+        <p> All-day battery life.1 </p>
+    </section>
+</article>
+
+<!-- <article>
     <h3>  Run powerful apps effortlessly.  </h3>
     <p>iPad works with the powerful apps you’re familiar with, like Adobe Photoshop or Microsoft Office, with the added ease of using them with touch.</p>
-    <img src="../foto/Ipad/power__dq4xxv2tdhkm_medium_2x.jpg" alt="">
+    <img src="../foto/Ipad/hero__dabgrginuqy6_medium_2x.jpg" alt="">
     <p>Adobe Photoshop</p>
-</article>
+</article> -->
 
-<article>
-    <h4> Stay productive and on the go all day</h4>
-    <p> All-day battery life.1 </p>
-</article>
 
-</main> 
+
+
+
+
+
+
+<footer>
+    <div>
+        <p> 1. Through December 8, 2023, Apple will donate $1 for every purchase made with Apple Pay on apple.com, in the Apple Store app, or at an Apple Store. Donations are limited to a maximum of one million dollars ($1,000,000). The donation goes to the Global Fund to fight AIDS and help fund critical health programs that save lives. </p>
+        <p> 2. Trade-in values will vary based on the condition, year, and configuration of your eligible trade-in device. Not all devices are eligible for credit. You must be at least 18 years old to be eligible to trade in for credit or for an Apple Gift Card. Trade-in value may be applied toward qualifying new device purchase, or added to an Apple Gift Card. Actual value awarded is based on receipt of a qualifying device matching the description provided when estimate was made. Sales tax may be assessed on full value of a new device purchase. In-store trade-in requires presentation of a valid photo ID (local law may require saving this information). Offer may not be available in all stores, and may vary between in-store and online trade-in. Some stores may have additional requirements. Apple or its trade-in partners reserve the right to refuse or limit quantity of any trade-in transaction for any reason. More details are available from Apple’s trade-in partner for trade-in and recycling of eligible devices. Restrictions and limitations may apply. </p>
+        <p> To access and use all Apple Card features and products available only to Apple Card users, you must add Apple Card to Wallet on an iPhone or iPad that supports and has the latest version of iOS or iPadOS. Apple Card is subject to credit approval, available only for qualifying applicants in the United States, and issued by Goldman Sachs Bank USA, Salt Lake City Branch. </p>
+        <p> If you reside in the U.S. territories, please call Goldman Sachs at 877-255-5923 with questions about Apple Card. </p>
+        <p> Learn more about how Apple Card applications are evaluated at </p>
+        
+        <a href="./index.html"> support.apple.com/kb/HT209218.</a>
+       <p> A subscription is required for Apple TV+.</p>
+    <div>
+<P> 
+More ways to shop: Find an Apple Store or other retailer near you. Or call 1-800-MY-APPLE.
+United States
+Copyright © 2023 Apple Inc. All rights reserved.
+</p>
+
+</footer>
+</main>
+
+<script src="../javascript/script.js"></script>
+
 </body>
 </html>
